--- a/src/App.css
+++ b/src/App.css
@@ -57,15 +57,17 @@
 
 .react-quiz-container .answerBtn {
   width: 100%;
+  color: var(--tg-theme-button-text-color);
+  background: var(--tg-theme-hint-color);
 }
 
 .react-quiz-container .selected {
-  background: #007bff;
-  color: white;
+  color: var(--tg-theme-button-text-color);
+  background: var(--tg-theme-button-text-color);
 }
 
 .react-quiz-container .startQuizWrapper .startQuizBtn {
-  font-size: 15px;
+  font-size: 1em;
   border-radius: 2px;
   line-height: 1.35135;
   color: rgba(0,0,0,0.65);
