--- a/src/App.css
+++ b/src/App.css
@@ -61,6 +61,9 @@
 
 .react-quiz-container .answerBtn {
   width: 100%;
+  padding: .5em;
+  border-radius: .5em;
+  border: 1px solid var(--tg-theme-hint-color);
   color: var(--tg-theme-hint-color);
   background: none;
 }
