--- a/src/App.css
+++ b/src/App.css
@@ -81,14 +81,15 @@
 .react-quiz-container .result-answer-wrapper {
   margin: 0;
   border: none;
+  margin-bottom: 1em;
 }
 
 .react-quiz-container .result-answer-wrapper h3 {
-    opacity: 0.8;
+    opacity: 0.5;
     color: var(--tg-theme-hint-color);
     margin: 0px;
-    padding: .5em;
-    border-radius: 0;
+    padding: .5em 0;
+    border-radius: 0; 
 }
 
 .react-quiz-container .result-answer-wrapper .explanation {
@@ -102,6 +103,9 @@
 
 .react-quiz-container .result-answer {
   padding: 0;
+  display: flex;
+  flex-direction: column;
+  gap: .5em;
 }
 
 .react-quiz-container .quiz-synopsis {
