--- a/src/App.css
+++ b/src/App.css
@@ -87,6 +87,7 @@
 .react-quiz-container .result-answer-wrapper h3 {
     opacity: 0.5;
     color: var(--tg-theme-hint-color);
+    background: none;
     margin: 0px;
     padding: .5em 0;
     border-radius: 0; 
